--- a/carro.html
+++ b/carro.html
@@ -25,8 +25,9 @@
             <div class="collapse navbar-collapse w-100" id="mainNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://valparaiso-roleplay-mta.gitbook.io/westcoast-rp-fivem/normativas/donaciones">Normativas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://discord.com/invite/T99hAzmP5A" target="_blank">Discord</a></li>
+                    <li class="nav-item"><a class="nav-link" href="catalogo.html">Tienda VIP</a></li>
+                    <li class="nav-item"><a class="nav-link" href="normativas.html">Normativas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://discord.com/tu-servidor" target="_blank">Discord</a></li>
                 </ul>
 
                 <div class="d-flex align-items-center">
@@ -113,8 +114,8 @@
                 <img src="assets/img/logo_tienda.png" alt="Logo Flaites NY" width="50" />
             </a>
             <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="https://valparaiso-roleplay-mta.gitbook.io/westcoast-rp-fivem/normativas/donaciones" class="nav-link px-2 footer-link-simple">Términos</a></li>
-                <li class="nav-item"><a href="https://discord.gg/T99hAzmP5A" target="_blank" class="nav-link px-2 footer-link-simple" title="Discord"><i class="fab fa-discord fa-lg"></i></a></li>
+                <li class="nav-item"><a href="terminos.html" class="nav-link px-2 footer-link-simple">Términos</a></li>
+                <li class="nav-item"><a href="https://discord.com/tu-servidor" target="_blank" class="nav-link px-2 footer-link-simple" title="Discord"><i class="fab fa-discord fa-lg"></i></a></li>
                 <li class="nav-item"><a href="https://www.instagram.com/" target="_blank" class="nav-link px-2 footer-link-simple" title="Instagram"><i class="fab fa-instagram fa-lg"></i></a></li>
                 <li class="nav-item"><a href="https://www.tiktok.com/es/" target="_blank" class="nav-link px-2 footer-link-simple" title="TikTok"><i class="fab fa-tiktok fa-lg"></i></a></li>
             </ul>
@@ -125,6 +126,7 @@
     <script src="assets/js/cart.js"></script>
     <script src="assets/js/notifications.js"></script>
     <script src="assets/js/auth.js"></script>
+    <script src="assets/js/history.js"></script>
     
     <script src="https://www.paypal.com/sdk/js?client-id=AcecErknNJvoDLtDQcowhug1mwogi7GzHFfcYu0xxLxJAyRWGz87xojyGRZiQVmvBq28lN0gLxvDBmNe&currency=USD&disable-funding=credit,card"></script>
 
