--- a/login.html
+++ b/login.html
@@ -15,14 +15,14 @@
             <div class="col-md-6 col-lg-4">
                 <div class="text-center mb-4">
                     <a href="index.html"><img src="assets/img/logo_tienda.png" alt="Logo" style="height: 100px;"></a>
-                    <h2 class="mt-4 text-uppercase">¡Bienvenido ciudadano!</h2>
+                    <h2 class="mt-3 text-uppercase">Bienvenido</h2>
                 </div>
                 <div class="card auth-card">
                     <div class="card-body p-4 p-lg-5 text-center">
                         <p class="text-white-50 mb-4">Inicia sesión con tu cuenta de Discord para continuar.</p>
                         <div class="d-grid">
                             <a href="http://localhost:3002/auth/discord" class="btn btn-lg fw-bold" style="background-color: #5865F2; color: white;">
-                                <i class="fab fa-discord me-2"></i> Discord
+                                <i class="fab fa-discord me-2"></i> Iniciar Sesión con Discord
                             </a>
                         </div>
                     </div>
